<resources>
    <string name="app_name">Melodify</string>
    <string name="switch_to_video">Switch to video</string>
    <string name="switch_to_audio">Switch to audio</string>
    <string name="collapse">Collapse</string>
    <string name="more_options">More Options</string>
    <string name="album_art">Album Art</string>
    <string name="add_to_library">Add to Library</string>
    <string name="favorite_or_add">Favorite or Add</string>
    <string name="lyrics">Lyrics</string>
    <string name="share">Share</string>
    <string name="queue">Queue</string>
    <string name="app_license">MIT License\n\nCopyright (c) 2026  UranophileLab \n\nPermission is hereby granted, free of charge, to any person obtaining a copy\nof this software and associated documentation files (the \"Software\"), to deal\nin the Software without restriction, including without limitation the rights\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell\ncopies of the Software, and to permit persons to whom the Software is\nfurnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all\ncopies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\nSOFTWARE.</string>
</resources>
